feat: Update X verification to use X API v2 with Deepseek fallback

--- a/server/.env.example
+++ b/server/.env.example
@@ -2,3 +2,12 @@ PORT=4000
 CLIENT_ORIGIN=http://localhost:5173
 SUPABASE_URL=https://wvpqjoizjlhhvtuebnrt.supabase.co
 SUPABASE_SERVICE_KEY=your_service_role_key_here
+
+# X API v2 credentials (required for verification)
+# Get from https://developer.x.com/en/portal/dashboard
+X_API_BEARER_TOKEN=your_x_api_bearer_token_here
+X_API_KEY=your_x_api_key_here
+X_API_SECRET=your_x_api_secret_here
+
+# Deepseek API (fallback for scraping if X API unavailable)
+DEEPSEEK_API_KEY=your_deepseek_api_key_here
