--- a/server/.env.example
+++ b/server/.env.example
@@ -2,3 +2,8 @@ PORT=4000
 CLIENT_ORIGIN=http://localhost:5173
 SUPABASE_URL=https://wvpqjoizjlhhvtuebnrt.supabase.co
 SUPABASE_SERVICE_KEY=your_service_role_key_here
+
+# X API Credentials (for agent verification)
+X_API_KEY=your_x_api_key
+X_API_SECRET=your_x_api_secret
+X_BEARER_TOKEN=your_x_bearer_token
