--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "express-rate-limit": "^7.4.0",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
+    "twitter-api-v2": "^1.29.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
